--- a/catalog/src/App.css
+++ b/catalog/src/App.css
@@ -10,6 +10,15 @@ body {
   color: beige;
 }
 
+.catalogImage {
+  filter: sepia(100%);
+}
+
+.catalogImage:hover {
+  filter: sepia(0%);
+  transform: scale(1.1);
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
