--- a/catalog/src/App.css
+++ b/catalog/src/App.css
@@ -17,8 +17,19 @@ body {
 .catalogImage:hover {
   filter: sepia(0%);
   transform: scale(1.1);
+  transition: ease-in-out 0.5s;
+  cursor: pointer;
 }
 
+.home {
+  color: beige;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.home:hover {
+  color: black;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
