--- a/moovice/src/App.css
+++ b/moovice/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body {
+  background-color: gray;
+  background-image: url(./images/abstract-5719221_1920.jpg);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+main {
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navigation {
+  border-bottom: solid 1px #ffffff;
+  text-align: center;
+}
+
+.navLink {
+  font-size: 2rem;
+  color: white;
+  padding: 0.5rem;
+  border-radius: 8px;
+}
+
+.navLink:hover {
+  color: gray;
+  background-color: white;
+
 }
